--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
