--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
+    "shadcn-ui": "^0.8.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
