--- a/package.json
+++ b/package.json
@@ -15,12 +15,22 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.6",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "prisma": "^5.9.1",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.8",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.8.1",
+    "react-marquee-slider": "^1.1.5",
+    "react-parallax": "^3.5.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-spring": "^9.7.3",
+    "react-visibility-sensor": "^5.1.1",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
