--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -20,6 +23,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
+    "nodemailer": "^6.9.10",
     "prisma": "^5.9.1",
     "react": "^18",
     "react-awesome-reveal": "^4.2.8",
