--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -24,12 +25,16 @@
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "nodemailer": "^6.9.10",
+    "nookies": "^2.5.2",
     "prisma": "^5.9.1",
     "react": "^18",
     "react-awesome-reveal": "^4.2.8",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
+    "react-loader-spinner": "^6.1.6",
     "react-marquee-slider": "^1.1.5",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
@@ -39,7 +44,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
