--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.6",
     "jsonwebtoken": "^9.0.2",
