--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.6",
     "jsonwebtoken": "^9.0.2",
@@ -33,7 +34,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.8.1",
     "react-loader-spinner": "^6.1.6",
     "react-marquee-slider": "^1.1.5",
@@ -53,7 +54,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.11.0",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0"
   }
 }
