--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
+    "next-cookies": "^2.0.3",
     "nodemailer": "^6.9.10",
     "nookies": "^2.5.2",
     "react": "^18",
@@ -47,6 +48,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
