(major_changes): updated the schema

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cookie": "^0.6.0",
@@ -32,6 +33,7 @@
     "nookies": "^2.5.2",
     "react": "^18",
     "react-awesome-reveal": "^4.2.8",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
@@ -40,6 +42,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-marquee-slider": "^1.1.5",
     "react-parallax": "^3.5.1",
+    "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "react-spring": "^9.7.3",
     "react-visibility-sensor": "^5.1.1",
