--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.338.0",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "next-cookies": "^2.0.3",
     "nodemailer": "^6.9.10",
     "nookies": "^2.5.2",
@@ -45,7 +45,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-spring": "^9.7.3",
     "react-visibility-sensor": "^5.1.1",
-    "shadcn-ui": "^0.8.0",
+    "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
