--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
@@ -21,9 +22,8 @@
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.0.0",
-    "framer-motion": "^11.0.6",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.338.0",
     "next": "^14.2.3",
@@ -31,34 +31,27 @@
     "nodemailer": "^6.9.10",
     "nookies": "^2.5.2",
     "react": "^18",
-    "react-awesome-reveal": "^4.2.8",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.8.1",
-    "react-loader-spinner": "^6.1.6",
-    "react-marquee-slider": "^1.1.5",
-    "react-parallax": "^3.5.1",
-    "react-query": "^3.39.3",
-    "react-responsive-carousel": "^3.2.23",
-    "react-spring": "^9.7.3",
-    "react-visibility-sensor": "^5.1.1",
+    "react-leaflet": "^4.2.1",
+    "react-tabs": "^6.0.2",
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
-    "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "@types/react": "^18.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
     "prisma": "^5.13.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.4.5"
   }
 }
