--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.8.1",
     "react-leaflet": "^4.2.1",
+    "react-select": "^5.8.0",
     "react-tabs": "^6.0.2",
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.2.1",
