--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.11.4",
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.16.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -35,6 +35,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.8.1",
@@ -52,7 +53,7 @@
     "@types/react": "^18.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "prisma": "^5.16.1",
+    "prisma": "^5.16.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.4.5"
   }
