--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nookies": "^2.5.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
